2005-02-07  Bastien Nocera  <hadess@hadess.net>

	* src/disc-test.c: (main): print out the list of connected drives
	if we get an error trying to figure out the type of a disc

2005-02-07  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_set_media_device):
	* src/totem-preferences.c: (on_combo_entry1_changed):
	Guard against NULL being passed to the xine-lib backend for
	the media device (Closes: #166536)

2005-02-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_video_property),
	(bacon_video_widget_set_video_property):
	  Fix colorbalance getting/setting between runs (#163490).

2005-02-03  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: fix regenerate-built-sources
	* src/egg-*: update from libegg CVS

2005-01-30  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_set_audio_out_type):
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_can_set_volume),
	(bacon_video_widget_set_audio_out_type):
	* src/bacon-video-widget.h:
	* src/totem-preferences.c: (totem_prefs_set_show_visuals),
	(audio_out_menu_changed):

	Make bacon_video_widget_set_audio_out_type return whether the
	application needs to restart for this to take effect, the xine-lib
	backend also now knows that the AC3 passthrough output can't set
	the volume (Closes: #122580)

2005-01-30  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: fix typo that made the nautilus-extension test
	useless (Closes: #165630)

2005-01-30  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_get_languages): Patch from Nickolay V. Shmyrev
	<nshmyrev@yandex.ru> to handle unnamed sound channels, for multi-audio
	AVI files (Closes: #164741)

2005-01-30  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* data/uri.glade: change the name of the history ID to totem